<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <RelativeLayout
        android:id="@+id/rv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/black_student_happy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/ll_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_corner_rectangle"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/otp_sms"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_phone" />

        <com.poovam.pinedittextfield.SquarePinField
            android:id="@+id/squareField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:autofillHints="@null"
            android:inputType="number"
            android:textSelectHandle="@drawable/text_handle"
            android:fontFamily="monospace"
            android:textSize="16sp"
            app:cornerRadius="4dp"
            app:fieldBgColor="#ddd"
            app:fieldColor="#ddd"
            app:highlightColor="#ddd"
            app:highlightType="allFields"
            app:isCursorEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/tv_otp_not_received"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lineThickness="2dp"
            app:noOfFields="6"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:textColor="@color/black"
            android:id="@+id/timertv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:text="00:59"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/squareField"
            />

        <TextView
            android:id="@+id/tv_otp_not_received"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:text="@string/did_not_receive_an_otp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/squareField" />

        <TextView
            android:id="@+id/tv_resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/resend_otp"
            android:textColor="@color/colorSecondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_otp_not_received" />

        <Button
            android:id="@+id/verifyButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/colorSecondary"
            android:text="@string/phone_verify"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/ll_otp"
            app:layout_constraintEnd_toEndOf="@id/ll_otp"
            app:layout_constraintStart_toStartOf="@id/ll_otp"
            app:layout_constraintTop_toBottomOf="@id/tv_resend" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>